# op_system

./: .gitignore  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  gh-pages.yaml  release.yaml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/api-reference/compile/: index.html
0.1/api-reference/op-system/: index.html
0.1/api-reference/specs/: index.html
0.1/development/block-axis-vmap-plan/: index.html
0.1/development/code-style/: index.html
0.1/development/creating-a-release/: index.html
0.1/development/issue-168-block-stripped-rhs-plan/: index.html
0.1/guides/getting-started/: index.html
0.1/search/: search_index.json
docs/: index.md
docs/development/: block-axis-vmap-plan.md  code-style.md  creating-a-release.md  issue-168-block-stripped-rhs-plan.md
docs/explanation/: Basic_usage.md  concepts.md  design_principles.md  metadata_preservation.md  safety_&_validation.md
docs/guides/: getting-started.md
docs/reference/: api.md
flepimop2-op_system/: LICENSE  README.md  pyproject.toml
flepimop2-op_system/src/flepimop2/system/op_system/: __init__.py  errors.py
flepimop2-op_system/tests/: test__version__.py  test_errors.py  test_system.py
scripts/: api-reference.py  release_validate.py
src/op_system/: __init__.py  _axes.py  _block_axes.py  _constraints.py  _errors.py  _helpers.py  _identifer_string.py  _ir.py  _ir_expand.py  _ir_lower.py  _ir_templates.py  _normalize.py  _normalize_block.py  _normalize_chains.py  _normalize_initial_state.py  _normalize_ir.py  _normalize_kernels.py  _operators.py  _state_string.py  _symbols.py  _templates.py  _typing.py  _vectorize.py  compile.py  errors.py  specs.py
tests/: conftest.py
tests/op_system/: test__version__.py  test_block_axes.py  test_ir_expand.py  test_jax_native.py  test_op_system_apply_along.py  test_op_system_compile.py  test_op_system_errors.py  test_op_system_expression_string.py  test_op_system_ir.py  test_op_system_ir_axes.py  test_op_system_ir_lower.py  test_op_system_ir_resolve.py  test_op_system_ir_substitute.py  test_op_system_ir_templates.py  test_op_system_ir_unparse.py  test_op_system_specs.py  test_op_system_templates.py  test_op_system_vectorize.py
