[project]
name = "op_system"
version = "0.1.1"
description = "Config-based RHS specification + compilation utilities for ODE/PDE systems"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
    { name = "Carl Pearson", email = "cap1024@unc.edu" },
    { name = "Timothy Willard", email = "twillard@unc.edu" },
]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.12.5,<3.0.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
data = [
    "pandas>=2.2",
    "pyarrow>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1,<2.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "sybil[pytest]>=9.2.0",
    "mike>=2.1.3",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.1",
    "mkdocs-autorefs>=1.4.3",
]

[tool.pytest.ini_options]
testpaths = [
    "docs/",
    "src/op_system/",
    "tests/",
]
addopts = "--doctest-modules"

[tool.ruff.format]
preview = true
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D203",
    "D212",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["INP001", "PLC2701", "S101"]
"flepimop2-op_system/src/flepimop2/system/op_system/__init__.py" = ["ANN401", "RUF067"]
"scripts/**/*" = [
    "N999",
    "T201",  # `print` found
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
files = "."
exclude = [
    "examples/",
    "flepimop2-op_system/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/op_system"]
include = ["src/op_system/py.typed"]
