[project]
name = "flepimop2-op_system"
version = "0.1.0"
description = "flepimop2 system provider package for op_system"
requires-python = ">=3.11,<3.15"
authors = [
  { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
]
dependencies = [
  # Declare the dependency normally...
  "op-system>=0.1.0",

  # flepimop2 is not in a registry, so keep it as a direct reference.
  "flepimop2 @ git+https://github.com/ACCIDDA/flepimop2.git@main",

  "pydantic>=2.0,<3",
  "numpy>=1.26",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/ACCIDDA/op_system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# REQUIRED for hatchling to accept git/direct URL dependencies
[tool.hatch.metadata]
allow-direct-references = true

# Ensure hatchling can build from src/ layout and include the namespace package
[tool.hatch.build.targets.wheel]
packages = ["src/flepimop2"]

# --- uv monorepo wiring: satisfy op-system from the sibling directory ---
[tool.uv.sources]
op-system = { path = ".." }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "CPY001",
  "D203",
  "D212",
  "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.13.3",
  "mypy>=1.18.2",
]
