[project]
name = "flepimop2-op_system"
version = "0.1.2"
description = "flepimop2 system provider package for op_system"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
    { name = "Carl Pearson", email = "cap1024@unc.edu" },
    { name = "Timothy Willard", email = "twillard@unc.edu" },
]
license = { file = "LICENSE" }
dependencies = [
  "op-system>=0.1.0",
  "flepimop2>=0.1.0",
  "pydantic>=2.0,<3",
  "numpy>=1.26",
  "PyYAML>=6.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Repository = "https://github.com/ACCIDDA/op_system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ensure hatchling can build from src/ layout and include the namespace package
[tool.hatch.build.targets.wheel]
packages = ["src/flepimop2"]
include = ["src/flepimop2/system/op_system/py.typed"]

# --- uv monorepo wiring: satisfy op-system from the sibling directory ---
[tool.uv.sources]
op-system = { path = ".." }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --doctest-modules"


[tool.ruff.format]
preview = true
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "COM812",
  "D203",
  "D212",
  "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["INP001", "S101"]
"src/flepimop2/system/op_system/__init__.py" = ["RUF067"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.13.3",
  "mypy>=1.18.2",
]

[[tool.mypy.overrides]]
module = "flepimop2.*"
follow_imports = "normal"
